Improved hero text to better reflect profile. modified some css styles

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Nitin Jadhav's Portfolio</title>
+    <title>Nitin Jadhav's Web home!</title>
     <link rel="shortcut icon" href="./media/favicon.ico" />
     <link rel="icon" href="./media/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
