--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -15,8 +15,8 @@
   <div class="bullet-point">
     <dt><img src="./media/tick.svg" alt="bullet-point" /> Design System</dt>
     <dd>
-      Build a complete Design system for your product including styleguide and
-      UI projects setup, responsive layout
+      Build a complete Design system for your product including styleguide, UI
+      projects setup, responsive layout
     </dd>
   </div>
   <div class="bullet-point">
@@ -32,7 +32,7 @@
   <div class="bullet-point">
     <dt><img src="./media/tick.svg" alt="bullet-point" /> Frontend Training</dt>
     <dd>
-      Train your team in Core Javascript/React/Angular/CSS and other frontend
+      Train your team in Core JavaScript/React/Angular/CSS and other frontend
       technologies
     </dd>
   </div>
