--- a/src/pages/footer.html
+++ b/src/pages/footer.html
@@ -1,6 +1,6 @@
 <div class="container mx-auto text-grey pt-8">
   <div class="flex flex-col md:flex-col items-center">
-    <div class="relative mb-10">
+    <div class="relative my-10">
       <div class="profile-pic-shadow absolute h-32 w-32 rounded-full"></div>
       <img
         class="profile-pic h-32 w-32 rounded-full"
@@ -29,7 +29,7 @@
   </div>
   <div class="text-xs py-8 text-center">
     <p>
-      Copyright © 2018 Nitin Jadhav. Handcoded with
+      Copyright © 2018 Nitin Jadhav. Hand coded with
       <a href="https://tailwindcss.com">Tailwind CSS</a> and
       <a href="https://parceljs.org/">ParcelJS</a>
       <!-- TODO animated beer mug here -->
