--- a/src/pages/hero.html
+++ b/src/pages/hero.html
@@ -1,22 +1,23 @@
 <div
   class="container mx-auto py-12 text-blue-dark h-full flex flex-col justify-around lg:w-2/5 w-2/3"
 >
-  <div>
+  <div styles="text-align:justify;">
     <p class="capital-font leading-loose" style="font-size: 4rem;">Hi.</p>
     <p>
-      I am Nitin. I am a multi‑disciplinary designer and a fullstack Javascript
-      developer, specializing in
-      <strong>frontend design & development</strong> based out of Pune, India.
+      A multi‑disciplinary designer and a developer, specializing in
+      <strong>frontend development</strong> based out of Pune, India.
     </p>
     <p>
-      I am deeply passionate about user experience. I love designing polished
-      UIs for products using cutting-edge tech. I have worked on multiple UX
-      design projects, and few product design projects.
+      Passionate about user experience. loves developing polished, refined UIs
+      for products using cutting-edge tech. Strives to be minimalistic in both
+      code and design.
     </p>
     <p>
-      I care about accessibility and performance: for me, performance is THE
-      experience. <br />
+      Deeply cares about accessibility and performance. Believes small,
+      incremental improvements can really add up over time. <br />
     </p>
+    <br />
+    <p>Loves playing video games and reading lots of books.</p>
     <p>
       I am currently working with QIO Technologies at Pune (a UK based company).
     </p>
