--- a/src/pages/footer.html
+++ b/src/pages/footer.html
@@ -11,7 +11,8 @@
     <div class="mb-10 flex-1">
       <div>
         Want to talk? Use above contact form, it works! or
-        <a href="mailto:nitinjadhav@gmail.com">email me here</a>.
+        <a href="mailto:nitinjadhav@gmail.com">email me here</a>. Click here for
+        my <a href="media/resume-2019.pdf">Resume</a>.
       </div>
     </div>
     <!-- icons here -->
