Slightly changed * Hero info * Subtitle

--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -3,7 +3,7 @@
     <div class="logo-main-text mr-2">NJ</div>
     <div class="flex flex-col text-l text-blue-dark">
       <div class="flex-1 font-bold">Nitin Jadhav</div>
-      <div class="flex-1 font-light">Designer & Developer</div>
+      <div class="flex-1 font-light">Frontend Specialist</div>
     </div>
   </div>
 </nav>
