--- a/src/pages/hero.html
+++ b/src/pages/hero.html
@@ -4,7 +4,7 @@
   <div styles="text-align:justify;">
     <p class="capital-font leading-loose" style="font-size: 4rem;">Hi.</p>
     <p>
-      A multi‑disciplinary designer and a developer, specializing in
+      A multi‑disciplinary developer, specializing in
       <strong>frontend development</strong> based out of Pune, India.
     </p>
     <p>
@@ -23,7 +23,8 @@
     </p>
     <br />
     <div class="hero-links">
-      <a target="_blank" href="https://medium.com/@nitinj">My Blog</a>
+      <a target="_blank" class="mr-2" href="https://medium.com/@nitinj">My Medium Blog</a>
+      <a target="_blank" href="https://dev.to/nitinja">My Dev.to Blog</a>
     </div>
 
     <div class="flex my-8 ">
