adds latest resume and updates link in footer

--- a/src/pages/footer.html
+++ b/src/pages/footer.html
@@ -12,7 +12,7 @@
       <div>
         Want to talk? Use above contact form, it works! or
         <a href="mailto:nitinjadhav@gmail.com">email me here</a>. Click here for
-        my <a href="media/resume-2019.pdf">Resume</a>.
+        my <a href="media/Resume - Nitin Jadhav - Frontend - Lead.pdf">Resume</a>.
       </div>
     </div>
     <!-- icons here -->
